# box

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  fintech-companies.md  package-lock.json  package.json
.github/: dependabot.yml
.github/scripts/: check-resume-urls.sh
.github/workflows/: clean-workflow-runs.yml  close-pull-request.yml  release-actions-runner.yml  release-backup-utils.yml  release-cocd.yml  release-ec2-statuscheck-rebooter.yml  release-eip-rotation-handler.yml  release-eip-rotator.yml  release-elasticache-backup-chart.yml  release-elasticache-backup.yml  release-filesystem-cleaner.yml  release-hugo.yml  release-idled.yml  release-kk.yml  release-promdrop-rs.yml  release-promdrop.yml  release-redis-console-chart.yml  release-redis-console.yml
box/: company-research.md  devops-morning-routine.md  financial-note.md  fintech-companies.md  fintech-company-list.md
box/actions/: README.md
box/aws-transfer-family/: README.md
box/books/: README.md
box/containers/: README.md
box/containers/filesystem-cleaner/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  example-pod.yaml  go.mod
box/containers/filesystem-cleaner/cmd/filesystem-cleaner/: main.go
box/containers/filesystem-cleaner/pkg/cleaner/: cleaner.go
box/containers/filesystem-cleaner/pkg/config/: config.go
box/containers/filesystem-cleaner/src/: cleaner.rs  config.rs  main.rs
box/investment/: securities-101.md
box/kubernetes/: README.md
box/kubernetes-policies/: README.md
box/kubernetes/elasticache-backup/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
box/kubernetes/elasticache-backup/charts/elasticache-backup/: Chart.yaml  README.md  values.yaml
box/kubernetes/elasticache-backup/charts/elasticache-backup/templates/: cronjob.yaml  serviceaccount.yaml
box/kubernetes/elasticache-backup/docs/: iam-policy.json
box/kubernetes/elasticache-backup/src/: backup.rs  cli.rs  main.rs  snapshot.rs  types.rs
box/kyverno-policies/: README.md  restrict-scale.yml
box/note/: README.md
box/oneliner/: ol-2025.txt
box/resume/: Makefile  README.md  bithumb-interview-qa.md  makefile  resume-short.html  resume.html  style.css
box/slides/: README.md  build.sh
box/strudel/: birds-of-a-feather.str  yaml-all-day.js
box/til/: README.md  articles.md  cgoa.md  cgroup-v2-dind.md  claude.md  configmap-reload.md  coredns.md  cursor-extension.md  cve-2025-49844-elasticache.md  db.md  devrel.md  draft-retrospective-2024.md  (+28 more)
box/tools/kk/: Cargo.toml  Makefile  README.md  go.mod  go.sum
box/tools/kk/cmd/kk/: main.go
box/tools/kk/configs/: domain-example.yaml
box/tools/kk/internal/checker/: checker.go
box/tools/kk/internal/config/: config.go
box/tools/kk/internal/logger/: logger.go
box/tools/kk/src/: checker.rs
bucket/: fintech-companies.md
(+271 files in other folders)
