[package]
name = "kk-rs"
version = "0.1.0"
edition = "2021"
authors = ["younsl"]
description = "A CLI tool that checks domain connectivity (Rust port of kk)"
license = "MIT"

[[bin]]
name = "kk"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["blocking"] }

# Async runtime (for parallel requests)
tokio = { version = "1.41", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Terminal spinner
indicatif = "0.17"

# Table formatting
tabled = "0.17"

# Time utilities
chrono = "0.4"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
